# FlashRecord

./: .coverage  .dockerignore  .gitignore  .pypirc.template  CHANGELOG.md  CHANGELOG_v0.3.4.md  CHANGELOG_v0.3.5.md  CICD_PYPI_SUCCESS_NOTES.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_IMPLEMENTATION_REPORT.md  INDEX.md  INSTALL_SETUP.md  LINT_FIXES.md  MANIFEST.in  NATIVE_SCREENSHOT_IMPLEMENTATION.md  PATCH_COMPLETION_REPORT.md  PNG_COMPRESSION_DIAGNOSIS.md  PNG_COMPRESSION_V033_COMPLETION.md  PRODUCTION_READINESS_REPORT.md  PYPI_DEPLOY.md  README.md  REFACTORING_COMPLETION_REPORT.md  VISION.md  config.json  demo_screenshot.py  docker-compose.yml  flashrecord_cli_wrapper.py  flashrecord_re-audit_report.md  flashrecord_start.bat  fr_sc.bat  fr_sc.sh  fr_sv.bat  fr_sv.sh  pyproject.toml  requirements.txt  test_compression_improved.py  test_flashrecord.py  (+3 more)
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.md
docs/reports/: COMPLETION_REPORT.md  EXECUTION_SUMMARY.md  INSTALL_UI_UX_UPDATE.md  NATIVE_SCREENSHOT_IMPLEMENTATION.md  REX_FIX_7_CRITICAL_PATCHES.md  REX_V032_COMPLETION_REPORT.md  SCREENSHOT_TEST_RESULTS.md  TESTING_REPORT_v0.1.1.md  index.md
flashrecord/: __init__.py  ai_prompt.py  api.py  cli.py  config.py  manager.py  screen_recorder.py  screenshot.py  video_recorder.py
scripts/: build_docs.py  doc_sanity_check.py
src/flashrecord/: __init__.py  ai_prompt.py  api.py  cli.py  compression.py  config.py  install.py  manager.py  screen_recorder.py  screenshot.py  utils.py
tests/: conftest.py  test_ai_prompt.py  test_api.py  test_cli.py  test_screenshot.py  test_utils.py
tests/demos/: test_sv_now.py
tests/generators/: create_15frame_gif.py  create_test_assets.py
tests/integration/: test_basic.py  test_compression.py  test_rex_fix7.py  test_rex_fix7_comprehensive.py  test_rex_v032.py
tests/unit/: __init__.py  test_ai_prompt.py  test_cli.py  test_compression.py  test_config.py  test_manager.py  test_screen_recorder.py  test_screenshot.py  test_screenshot_unit.py  test_utils.py  test_utils_edge_cases.py
tests/validation/: check_gif_colors.py  final_color_validation.py  test_color_fix.py
tests_backup/: conftest.py  test_manager.py  test_screenshot.py  test_video_recorder.py
tests_backup/demos/: run_screenshot.py  test_sc_now.py
tests_backup/diagnostics/: diagnose_color_shift.py
tests_backup/integration/: test_15frames.py  test_rex_patch3.py  test_sv_v032.py
tests_backup/unit/: test_compression_unit.py
tests_backup/validation/: compare_gifs.py  test_exact_15frames.py
